# ninutils

./: CMakeLists.txt  README.md
include/ninutils/: common.hpp  dol.hpp  extra_info.hpp  presets.hpp  rel.hpp  symbols.hpp  utils.hpp
src/: dol.cpp  extra_info.cpp  presets.cpp  readdol.cpp  readrel.cpp  rel.cpp  symbols.cpp
